<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Main_menu"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/text_title_size"
        android:gravity="center"
        android:id="@+id/tv_main_title"/>

    <Button
        android:layout_width="@dimen/btn_main_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/btn_main_text_size"
        android:text="@string/main_round_start"
        android:id="@+id/btn_main_round_start"
        android:layout_marginTop="@dimen/btn_main_vertical_margin"
        android:layout_centerInParent="true"
        android:layout_below="@id/tv_main_title"/>

    <Button
        android:layout_width="@dimen/btn_main_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/btn_main_text_size"
        android:text="@string/main_match_history"
        android:layout_below="@id/btn_main_round_start"
        android:layout_marginTop="@dimen/btn_main_vertical_margin"
        android:layout_centerInParent="true"
        android:id="@+id/btn_main_match_history"/>

    <Button
        android:layout_width="@dimen/btn_main_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/btn_main_text_size"
        android:text="@string/main_profile_managment"
        android:layout_below="@id/btn_main_match_history"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/btn_main_vertical_margin"
        android:id="@+id/btn_main_profile_managment"/>

    <Button
        android:layout_width="@dimen/btn_main_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/btn_main_text_size"
        android:text="@string/main_course_managment"
        android:layout_centerInParent="true"
        android:layout_below="@id/btn_main_profile_managment"
        android:layout_marginTop="@dimen/btn_main_vertical_margin"
        android:id="@+id/btn_main_course_managment"/>

    <Button
        android:layout_width="@dimen/btn_main_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/btn_main_text_size"
        android:text="@string/main_help"
        android:layout_centerInParent="true"
        android:layout_below="@id/btn_main_course_managment"
        android:layout_marginTop="@dimen/btn_main_vertical_margin"
        android:id="@+id/btn_main_help"/>

</RelativeLayout>
