<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Main_menu"
    android:orientation="vertical"
   >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_round"
        android:textSize="@dimen/text_title_size"
        android:gravity="center"
        android:id="@+id/tv_setup_round_title"
        android:layout_marginBottom="@dimen/btn_main_vertical_margin"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:weightSum="20">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_subtitle_size"
            android:text="@string/select_course"
            android:layout_weight="1"/>
        <fragment
            android:name="com.golf.disc.lg.linus.dis_golf.Fragment_Select_Course"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="7"

            android:id="@+id/fragment_select_course"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_subtitle_size"
            android:text="@string/select_players"
            android:layout_weight="1"/>
        <fragment
            android:name="com.golf.disc.lg.linus.dis_golf.Fragment_Select_Player"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:id="@+id/fragment_select_player"/>
          <include
              layout="@layout/button_back_next"
              android:layout_width="fill_parent"
              android:layout_height="0dp"
              android:layout_weight="4"
              android:id="@+id/layout_back_next"/>
    </LinearLayout>
</LinearLayout>
